uv and pyproject.toml instruction update

--- a/website/setup.qmd
+++ b/website/setup.qmd
@@ -6,10 +6,10 @@ title: Setup
 
 Pick **one** of the following ways to set up your Python environment.
 
-Here is the `requirements.txt` you will need to set up the environment.
+Here is the `pyproject.toml` you will need to set up the environment.
 
 ```bash
-{{< include /../requirements.txt >}}
+{{< include /../pyproject.toml >}}
 ```
 
 ### conda
@@ -17,21 +17,20 @@ Here is the `requirements.txt` you will need to set up the environment.
 ```bash
 conda create -n shiny python=3.12
 conda activate shiny
-pip install -r requirements.txt
+pip install .
 ```
 
 ### python + venv
 
 ```bash
 python -m venv venv
-source venv/bin/activate && pip install -r requirements.txt
+source venv/bin/activate && pip install .
 ```
 
 ### uv
 
 ```bash
-uv venv venv
-source venv/bin/activate && uv pip install -r requirements.txt
+uv sync
 ```
 
 ## IDE
